# Play_Life_fastAPI_project

./: git_pull.txt  main.py  pyproject.toml
learn/: git_branch  git_branch.txt
